// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - ls_tool tool call snapshot altMode (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  List the components directory

⚙ List src/components
  └─ Listed 5 entries
"
`;

exports[`ChatDisplay - ls_tool tool call snapshot altMode (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  List the components directory

⚙ List src/components
  └─ Running ...
"
`;
